--- a/css/styles.css
+++ b/css/styles.css
@@ -589,10 +589,8 @@ hr {
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
-  margin-top: 50px;
-  max-width: 550px;
+  height: 100vh;
   width: 100%;
-  background-color: lightgray;
   padding: 0.5rem;
   gap: 1rem;
 }
@@ -674,6 +672,10 @@ hr {
 
   .cards {
     grid-template-columns: 1fr;
+  }
+
+  .hero-title {
+    font-size: 0.89375rem;
   }
 
   .first-input {
