--- a/css/styles.css
+++ b/css/styles.css
@@ -434,6 +434,9 @@ nav ul li a {
 .card-portfolio img {
   width: 100%;
   height: 220px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
